--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -43,63 +43,22 @@
   <!-- Title -->
   <h2>Featured Watches</h2>
 
-  <!-- #2 -->
-  <a href="src/main/resources/pages/watches/Watch-2.html?id=2"
+  <!--MEN 4-->
+  <a href="src/main/resources/pages/leadz/watches/men/Men-4.html?id=1"
      class="featured-link featured-watch-item">
     <div class="featured-watch">
       <div class="featured-image">
-        <img src="src/main/resources/assets/watches/2/watch 2 - 1.webp" alt="Watch 2">
+        <img src="src/main/resources/assets/leadz/watches/men/4/M4-18.jpg" alt="Watch 2">
       </div>
       <div class="featured-details">
-        <h4>Trendy And Elegant Quartz Wristwatch</h4>
+        <h4>BAISHENG Square Shaped Watch</h4>
         <p class="featured-desc">
-          Slim design with a charming finish – perfect for classy outfits and occasions.
+          A modern take on classic design, the BAISHENG Square Shaped watch offers a distinctive look with its sharp, square dial. Its minimalist style and sleek profile make it a perfect accessory for both casual and formal occasions. Stainless Steal
         </p>
         <div class="price">
           <span class="currency">LKR</span>
-          <span class="current">1,499.00</span>
-          <span class="original">2,391.37</span>
-        </div>
-      </div>
-    </div>
-  </a>
-
-  <!-- #3 -->
-  <a href="src/main/resources/pages/bundles/Bundle-1.html?id=3"
-     class="featured-link featured-watch-item">
-    <div class="featured-watch">
-      <div class="featured-image">
-        <img src="src/main/resources/assets/bundle/1/bundle 1 - 1.webp" alt="Bundle 1">
-      </div>
-      <div class="featured-details">
-        <h4>5pcs Men's Fashion Quartz Watch & Bracelet Set</h4>
-        <p class="featured-desc">
-          Gift‑ready bundle with multiple styles – ideal for personal use or surprises.
-        </p>
-        <div class="price">
-          <span class="currency">LKR</span>
-          <span class="current">1,999.00</span>
-          <span class="original">2,990.69</span>
-        </div>
-      </div>
-    </div>
-  </a>
-
-  <!-- #4 -->
-  <a href="src/main/resources/pages/cases/Case-2.html?id=1"
-     class="featured-link featured-watch-item">
-    <div class="featured-watch">
-      <div class="featured-image">
-        <img src="src/main/resources/assets/cases/2/case 2 - 1.webp" alt="Watch 1">
-      </div>
-      <div class="featured-details">
-        <h4>ZOEJOE Wood Grain Watch Winder Box</h4>
-        <p class="featured-desc">
-          ZOEJOE Wood Grain Watch Winder Box - USB Powered, Flexible Pillow for Men & Women's Automatic Watches, Display Case Included        </p>
-        <div class="price">
-          <span class="currency">LKR</span>
-          <span class="current">13,000.00</span>
-          <span class="original">17,500.00</span>
+          <span class="current">3,000.00</span>
+          <span class="original">3,750.00</span>
         </div>
       </div>
     </div>
@@ -345,7 +304,7 @@
   <a href="src/main/resources/pages/leadz/watches/men/Men-12.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/leadz/watches/men/12/M12-3.jpg" alt="Mens Watch">
-      <h4>NAVIFORCE</h4>
+      <h4>NAVIFORCE 9233</h4>
       <div class="price">
         <span class="currency">LKR</span>
         <span class="current">5,500.00</span>
@@ -358,7 +317,7 @@
   <a href="src/main/resources/pages/leadz/watches/men/Men-13.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/leadz/watches/men/13/M13-1.jpg" alt="Mens Watch">
-      <h4>NAVIFORCE</h4>
+      <h4>NAVIFORCE 8051L</h4>
       <div class="price">
         <span class="currency">LKR</span>
         <span class="current">6,500.00</span>
@@ -371,7 +330,7 @@
   <a href="src/main/resources/pages/leadz/watches/men/Men-14.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/leadz/watches/men/14/M14-1.jpg" alt="Mens Watch">
-      <h4>NAVIFORCE</h4>
+      <h4>NAVIFORCE 9248L</h4>
       <div class="price">
         <span class="currency">LKR</span>
         <span class="current">4,500.00</span>
@@ -384,7 +343,7 @@
   <a href="src/main/resources/pages/leadz/watches/men/Men-15.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/leadz/watches/men/15/M15-1.jpg" alt="Mens Watch">
-      <h4>NAVIFORCE</h4>
+      <h4>NAVIFORCE 8078</h4>
       <div class="price">
         <span class="currency">LKR</span>
         <span class="current">4,200.00</span>
@@ -397,7 +356,7 @@
   <a href="src/main/resources/pages/leadz/watches/men/Men-16.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/leadz/watches/men/16/M16-1.jpg" alt="Mens Watch">
-      <h4>NAVIFORCE</h4>
+      <h4>NAVIFORCE 8072</h4>
       <div class="price">
         <span class="currency">LKR</span>
         <span class="current">7,000.00</span>
@@ -410,7 +369,7 @@
   <a href="src/main/resources/pages/leadz/watches/women/Women-5.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/leadz/watches/women/5/W5-1.jpg" alt="Womens Watch">
-      <h4>NAVIFORCE</h4>
+      <h4>NAVIFORCE 9226 – Women’s Watch</h4>
       <div class="price">
         <span class="currency">LKR</span>
         <span class="current">5,500.00</span>
@@ -423,7 +382,7 @@
   <a href="src/main/resources/pages/leadz/watches/women/Women-6.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/leadz/watches/women/6/W6-1.jpg" alt="Womens Watch">
-      <h4>NAVIFORCE</h4>
+      <h4>NAVIFORCE 5060 – Ladies Watch</h4>
       <div class="price">
         <span class="currency">LKR</span>
         <span class="current">4,000.00</span>
@@ -436,7 +395,7 @@
   <a href="src/main/resources/pages/leadz/watches/men/Men-17.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/leadz/watches/men/17/M17-1.jpg" alt="Mens Watch">
-      <h4>NAVIFORCE</h4>
+      <h4>NAVIFORCE 9248L</h4>
       <div class="price">
         <span class="currency">LKR</span>
         <span class="current">4,500.00</span>
@@ -449,7 +408,7 @@
   <a href="src/main/resources/pages/leadz/watches/men/Men-18.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/leadz/watches/men/18/M18-1.jpg" alt="Mens Watch">
-      <h4>NAVIFORCE</h4>
+      <h4>NAVIFORCE 9068L – Unisex Watch</h4>
       <div class="price">
         <span class="currency">LKR</span>
         <span class="current">8,000.00</span>
@@ -457,7 +416,6 @@
       </div>
     </div>
   </a>
-
 
 </div>
 
@@ -661,6 +619,15 @@
     </div>
   </a>
 
+  <!-- BRANDS -->
+  <a href="src/main/resources/pages/bundle.html?id=1" class="category-card-link">
+    <div class="category-card">
+      <img src="src/main/resources/assets/imgs/brands 1.webp" alt="Bundles">
+      <h4>Brands</h4>
+    </div>
+  </a>
+
+
   <!-- BUNDLE -->
   <a href="src/main/resources/pages/bundle.html?id=1" class="category-card-link">
     <div class="category-card">
@@ -668,14 +635,16 @@
       <h4>Bundles</h4>
     </div>
   </a>
+<!--
 
-  <!-- COUPLE -->
+  &lt;!&ndash; COUPLE &ndash;&gt;
   <a href="src/main/resources/pages/couple.html?id=1" class="category-card-link">
     <div class="category-card">
       <img src="src/main/resources/assets/imgs/couple 1.jpg" alt="Couple Watches">
       <h4>Couple Watches</h4>
     </div>
   </a>
+-->
 
   <!-- ACCESSORY -->
   <a href="src/main/resources/pages/accessories.html?id=1" class="category-card-link">
