--- a/src/main/resources/pages/leadz/watches/men/Men-12.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-12.html
@@ -24,11 +24,16 @@
     <!-- Thumbnails -->
     <div class="thumbs" id="thumbs">
         <img src="../../../../assets/leadz/watches/men/12/M12-3.jpg" alt="Watch 12" class="active" />
-        <img src="../../../../assets/leadz/watches/men/12/M12-1.jpg" alt="Watch 12" />
-        <img src="../../../../assets/leadz/watches/men/12/M12-2.jpg" alt="Watch 12" />
-        <img src="../../../../assets/leadz/watches/men/12/M12-4.jpg" alt="Watch 12" />
-        <img src="../../../../assets/leadz/watches/men/12/M12-5.jpg" alt="Watch 12" />
-        <img src="../../../../assets/leadz/watches/men/12/M12-6.jpg" alt="Watch 12" />
+        <img src="../../../../assets/leadz/watches/men/12/M12-8.jpg" alt="Watch 12" />
+        <img src="../../../../assets/leadz/watches/men/12/M12-10.jpg" alt="Watch 12" />
+        <img src="../../../../assets/leadz/watches/men/12/M12-12.jpg" alt="Watch 12" />
+        <img src="../../../../assets/leadz/watches/men/12/M12-14.jpg" alt="Watch 12" />
+        <img src="../../../../assets/leadz/watches/men/12/M12-16.jpg" alt="Watch 12" />
+        <img src="../../../../assets/leadz/watches/men/12/M12-7.jpg" alt="Watch 12" />
+        <img src="../../../../assets/leadz/watches/men/12/M12-9.jpg" alt="Watch 12" />
+        <img src="../../../../assets/leadz/watches/men/12/M12-11.jpg" alt="Watch 12" />
+        <img src="../../../../assets/leadz/watches/men/12/M12-13.jpg" alt="Watch 12" />
+        <img src="../../../../assets/leadz/watches/men/12/M12-15.jpg" alt="Watch 12" />
     </div>
 
     <!-- Main Image with Arrows -->
@@ -43,7 +48,7 @@
 
     <!-- Product Details -->
     <div class="details">
-        <h1 class="title">NAVIFORCE</h1>
+        <h1 class="title">NAVIFORCE 9233</h1>
 
         <div class="price-section">
             <div id="price">LKR 5,500.00</div>
@@ -51,7 +56,7 @@
         </div>
 
         <p class="description">
-            NAVIFORCE
+            The NAVIFORCE 9233 blends modern design with rugged durability. With its bold face, detailed dial, and comfortable strap, it’s built for men who want a reliable timepiece that stands out. Perfect for both casual wear and daily performance.
         </p>
 
         <div class="brand-label">Brand: NAVIFORCE</div>
@@ -59,23 +64,23 @@
         <!-- Color Options with Price -->
         <div class="colors" id="colors">
             <div class="color-option selected" data-price="5,500" data-original="7900.00">
-                <img src="../../../../assets/leadz/watches/men/12/M12-1.jpg" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/men/12/M12-7.jpg" alt="Watch" />
                 <div class="color-label">Brown-Silver</div>
             </div>
             <div class="color-option" data-price="5,500" data-original="7900.00">
-                <img src="../../../../assets/leadz/watches/men/12/M12-2.jpg" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/men/12/M12-11.jpg" alt="Watch" />
                 <div class="color-label">Black-White</div>
             </div>
             <div class="color-option" data-price="5,500" data-original="7900.00">
-                <img src="../../../../assets/leadz/watches/men/12/M12-4.jpg" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/men/12/M12-13.jpg" alt="Watch" />
                 <div class="color-label">Green-Black</div>
             </div>
             <div class="color-option" data-price="5,500" data-original="7900.00">
-                <img src="../../../../assets/leadz/watches/men/12/M12-5.jpg" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/men/12/M12-9.jpg" alt="Watch" />
                 <div class="color-label">Black</div>
             </div>
             <div class="color-option" data-price="5,500" data-original="7900.00">
-                <img src="../../../../assets/leadz/watches/men/12/M12-6.jpg" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/men/12/M12-15.jpg" alt="Watch" />
                 <div class="color-label">Brown-Black</div>
             </div>
         </div>
@@ -95,14 +100,6 @@
         <button class="buy-btn" id="buyNowBtn">Buy Now</button>
 
     </div>
-</div>
-
-<!-- Promo Video Section -->
-<div class="promo-video">
-    <video autoplay muted loop playsinline>
-        <source src="../../../assets/watches/1/watch%201%20-%207.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
-    </video>
 </div>
 
 <!-- JavaScript -->
