--- a/src/main/resources/pages/leadz/watches/men/Men-14.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-14.html
@@ -24,9 +24,11 @@
     <!-- Thumbnails -->
     <div class="thumbs" id="thumbs">
         <img src="../../../../assets/leadz/watches/men/14/M14-1.jpg" alt="Watch 14" class="active" />
-        <img src="../../../../assets/leadz/watches/men/14/M14-2.jpg" alt="Watch 14" />
-        <img src="../../../../assets/leadz/watches/men/14/M14-3.jpg" alt="Watch 14" />
-        <img src="../../../../assets/leadz/watches/men/14/M14-4.jpg" alt="Watch 14" />
+        <img src="../../../../assets/leadz/watches/men/14/M14-5.jpg" alt="Watch 14" />
+        <img src="../../../../assets/leadz/watches/men/14/M14-7.jpg" alt="Watch 14" />
+        <img src="../../../../assets/leadz/watches/men/14/M14-9.jpg" alt="Watch 14" />
+        <img src="../../../../assets/leadz/watches/men/14/M14-6.jpg" alt="Watch 14" />
+        <img src="../../../../assets/leadz/watches/men/14/M14-8.jpg" alt="Watch 14" />
     </div>
 
     <!-- Main Image with Arrows -->
@@ -41,7 +43,7 @@
 
     <!-- Product Details -->
     <div class="details">
-        <h1 class="title">NAVIFORCE</h1>
+        <h1 class="title">NAVIFORCE 9248L</h1>
 
         <div class="price-section">
             <div id="price">LKR 4,500.00</div>
@@ -49,7 +51,7 @@
         </div>
 
         <p class="description">
-            NAVIFORCE
+            The NAVIFORCE 9248L blends sleek design with reliable function. Featuring a bold dial, comfortable strap, and precise timekeeping, it’s built for everyday wear with a touch of modern edge. A stylish choice for men who value both looks and performance.
         </p>
 
         <div class="brand-label">Brand: NAVIFORCE</div>
@@ -61,11 +63,11 @@
                 <div class="color-label">Brown-Black</div>
             </div>
             <div class="color-option" data-price="4,500" data-original="6300.00">
-                <img src="../../../../assets/leadz/watches/men/14/M14-3.jpg" alt="Watch 14" />
+                <img src="../../../../assets/leadz/watches/men/14/M14-6.jpg" alt="Watch 14" />
                 <div class="color-label">Green</div>
             </div>
             <div class="color-option" data-price="4,500" data-original="6300.00">
-                <img src="../../../../assets/leadz/watches/men/14/M14-4.jpg" alt="Watch 14" />
+                <img src="../../../../assets/leadz/watches/men/14/M14-8.jpg" alt="Watch 14" />
                 <div class="color-label">Blue</div>
             </div>
         </div>
@@ -87,13 +89,6 @@
     </div>
 </div>
 
-<!-- Promo Video Section -->
-<div class="promo-video">
-    <video autoplay muted loop playsinline>
-        <source src="../../../assets/watches/1/watch%201%20-%207.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
-    </video>
-</div>
 
 <!-- JavaScript -->
 <script src="../../../../js/js.js"></script>
