--- a/src/main/resources/pages/leadz/watches/men/Men-15.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-15.html
@@ -24,6 +24,8 @@
     <!-- Thumbnails -->
     <div class="thumbs" id="thumbs">
         <img src="../../../../assets/leadz/watches/men/15/M15-1.jpg" alt="Watch 15" class="active" />
+        <img src="../../../../assets/leadz/watches/men/15/M15-3.jpg" alt="Watch 15" class="active" />
+        <img src="../../../../assets/leadz/watches/men/15/M15-2.jpg" alt="Watch 15" class="active" />
     </div>
 
     <!-- Main Image with Arrows -->
@@ -38,7 +40,7 @@
 
     <!-- Product Details -->
     <div class="details">
-        <h1 class="title">NAVIFORCE</h1>
+        <h1 class="title">NAVIFORCE 8078</h1>
 
         <div class="price-section">
             <div id="price">LKR 4,200.00</div>
@@ -46,7 +48,7 @@
         </div>
 
         <p class="description">
-            NAVIFORCE
+            The NAVIFORCE 8078 offers a bold and masculine design with reliable performance. Featuring a detailed dial, durable construction, and a comfortable strap, it’s built for men who appreciate both style and strength in their everyday watch.
         </p>
 
         <div class="brand-label">Brand: NAVIFORCE</div>
@@ -54,7 +56,7 @@
         <!-- Color Options with Price -->
         <div class="colors" id="colors">
             <div class="color-option selected" data-price="4,200" data-original="6250.00">
-                <img src="../../../../assets/leadz/watches/men/15/M15-1.jpg" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/men/15/M15-2.jpg" alt="Watch" />
                 <div class="color-label">Brown</div>
             </div>
         </div>
@@ -74,14 +76,6 @@
         <button class="buy-btn" id="buyNowBtn">Buy Now</button>
 
     </div>
-</div>
-
-<!-- Promo Video Section -->
-<div class="promo-video">
-    <video autoplay muted loop playsinline>
-        <source src="../../../assets/watches/1/watch%201%20-%207.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
-    </video>
 </div>
 
 <!-- JavaScript -->
