--- a/src/main/resources/pages/leadz/watches/men/Men-16.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-16.html
@@ -24,6 +24,8 @@
     <!-- Thumbnails -->
     <div class="thumbs" id="thumbs">
         <img src="../../../../assets/leadz/watches/men/16/M16-1.jpg" alt="Watch 1" class="active" />
+        <img src="../../../../assets/leadz/watches/men/16/M16-2.jpg" alt="Watch 1" class="active" />
+        <img src="../../../../assets/leadz/watches/men/16/M16-3.jpg" alt="Watch 1" class="active" />
     </div>
 
     <!-- Main Image with Arrows -->
@@ -38,7 +40,7 @@
 
     <!-- Product Details -->
     <div class="details">
-        <h1 class="title">NAVIFORCE</h1>
+        <h1 class="title">NAVIFORCE 8072</h1>
 
         <div class="price-section">
             <div id="price">LKR 7,000.00</div>
@@ -46,7 +48,7 @@
         </div>
 
         <p class="description">
-            NAVIFORCE
+            The NAVIFORCE 8072 is designed for men who value strength and style. Featuring a bold dial, sturdy build, and precise timekeeping, it’s the perfect companion for both everyday wear and active lifestyles. Rugged, reliable, and ready for anything.
         </p>
 
         <div class="brand-label">Brand: NAVIFORCE</div>
@@ -76,13 +78,6 @@
     </div>
 </div>
 
-<!-- Promo Video Section -->
-<div class="promo-video">
-    <video autoplay muted loop playsinline>
-        <source src="../../../assets/watches/1/watch%201%20-%207.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
-    </video>
-</div>
 
 <!-- JavaScript -->
 <script src="../../../../js/js.js"></script>
