--- a/src/main/resources/pages/leadz/watches/men/Men-17.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-17.html
@@ -24,8 +24,10 @@
     <!-- Thumbnails -->
     <div class="thumbs" id="thumbs">
         <img src="../../../../assets/leadz/watches/men/17/M17-1.jpg" alt="Watch 17" class="active" />
-        <img src="../../../../assets/leadz/watches/men/17/M17-2.jpg" alt="Watch 17" />
-        <img src="../../../../assets/leadz/watches/men/17/M17-3.jpg" alt="Watch 17" />
+        <img src="../../../../assets/leadz/watches/men/17/M17-5.jpg" alt="Watch 17" />
+        <img src="../../../../assets/leadz/watches/men/17/M17-7.jpg" alt="Watch 17" />
+        <img src="../../../../assets/leadz/watches/men/17/M17-6.jpg" alt="Watch 17" />
+        <img src="../../../../assets/leadz/watches/men/17/M17-4.jpg" alt="Watch 17" />
     </div>
 
     <!-- Main Image with Arrows -->
@@ -40,7 +42,7 @@
 
     <!-- Product Details -->
     <div class="details">
-        <h1 class="title">NAVIFORCE</h1>
+        <h1 class="title">NAVIFORCE 9248L</h1>
 
         <div class="price-section">
             <div id="price">LKR 4,500.00</div>
@@ -48,7 +50,7 @@
         </div>
 
         <p class="description">
-            NAVIFORCE
+            The NAVIFORCE 9248L SBDBN blends sleek design with reliable function. Featuring a bold dial, comfortable strap, and precise timekeeping, it’s built for everyday wear with a touch of modern edge. A stylish choice for men who value both looks and performance.
         </p>
 
         <div class="brand-label">Brand: NAVIFORCE</div>
@@ -56,11 +58,11 @@
         <!-- Color Options with Price -->
         <div class="colors" id="colors">
             <div class="color-option selected" data-price="4,500" data-original="6550.00">
-                <img src="../../../../assets/leadz/watches/men/17/M17-3.jpg" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/men/17/M17-4.jpg" alt="Watch" />
                 <div class="color-label">Black</div>
             </div>
             <div class="color-option" data-price="4,500" data-original="6550.00">
-                <img src="../../../../assets/leadz/watches/men/17/M17-2.jpg" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/men/17/M17-6.jpg" alt="Watch" />
                 <div class="color-label">Black-Blue</div>
             </div>
         </div>
@@ -82,13 +84,6 @@
     </div>
 </div>
 
-<!-- Promo Video Section -->
-<div class="promo-video">
-    <video autoplay muted loop playsinline>
-        <source src="../../../assets/watches/1/watch%201%20-%207.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
-    </video>
-</div>
 
 <!-- JavaScript -->
 <script src="../../../../js/js.js"></script>
