--- a/src/main/resources/pages/leadz/watches/men/Men-18.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-18.html
@@ -24,8 +24,9 @@
     <!-- Thumbnails -->
     <div class="thumbs" id="thumbs">
         <img src="../../../../assets/leadz/watches/men/18/M18-1.jpg" alt="Watch 18" class="active" />
-        <img src="../../../../assets/leadz/watches/men/18/M18-2.jpg" alt="Watch 28" />
-        <img src="../../../../assets/leadz/watches/men/18/M18-3.jpg" alt="Watch 28" />
+        <img src="../../../../assets/leadz/watches/men/18/M18-4.jpg" alt="Watch 18" />
+        <img src="../../../../assets/leadz/watches/men/18/M18-3.jpg" alt="Watch 18" />
+        <img src="../../../../assets/leadz/watches/men/18/M18-6.jpg" alt="Watch 18" />
     </div>
 
     <!-- Main Image with Arrows -->
@@ -40,7 +41,7 @@
 
     <!-- Product Details -->
     <div class="details">
-        <h1 class="title">NAVIFORCE</h1>
+        <h1 class="title">NAVIFORCE 9068L – Unisex Watch</h1>
 
         <div class="price-section">
             <div id="price">LKR 8,000.00</div>
@@ -48,19 +49,19 @@
         </div>
 
         <p class="description">
-            NAVIFORCE
+            With its sleek design and balanced style, the NAVIFORCE 9068L is a versatile unisex watch made for anyone who appreciates simplicity and elegance. Comfortable to wear and easy to match, it’s a perfect choice for daily use or a stylish gift.
         </p>
 
         <div class="brand-label">Brand: NAVIFORCE</div>
 
         <!-- Color Options with Price -->
         <div class="colors" id="colors">
-            <div class="color-option selected" data-price=8,000" data-original="12500.00">
+            <div class="color-option selected" data-price="8,000" data-original="12500.00">
                 <img src="../../../../assets/leadz/watches/men/18/M18-3.jpg" alt="Watch" />
                 <div class="color-label">Brown-Black</div>
             </div>
-            <div class="color-option" data-price=8,000" data-original="12500.00">
-                <img src="../../../../assets/leadz/watches/men/18/M18-2.jpg" alt="Watch" />
+            <div class="color-option" data-price="8,000" data-original="12500.00">
+                <img src="../../../../assets/leadz/watches/men/18/M18-4.jpg" alt="Watch" />
                 <div class="color-label">Black</div>
             </div>
         </div>
@@ -82,13 +83,6 @@
     </div>
 </div>
 
-<!-- Promo Video Section -->
-<div class="promo-video">
-    <video autoplay muted loop playsinline>
-        <source src="../../../assets/watches/1/watch%201%20-%207.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
-    </video>
-</div>
 
 <!-- JavaScript -->
 <script src="../../../../js/js.js"></script>
