--- a/src/main/resources/pages/leadz/watches/women/Women-5.html
+++ b/src/main/resources/pages/leadz/watches/women/Women-5.html
@@ -24,8 +24,12 @@
     <!-- Thumbnails -->
     <div class="thumbs" id="thumbs">
         <img src="../../../../assets/leadz/watches/women/5/W5-1.jpg" alt="Watch 5" class="active" />
-        <img src="../../../../assets/leadz/watches/women/5/W5-2.jpg" alt="Watch 5" />
-        <img src="../../../../assets/leadz/watches/women/5/W5-3.jpg" alt="Watch 5" />
+        <img src="../../../../assets/leadz/watches/women/5/W5-8.jpg" alt="Watch 5" />
+        <img src="../../../../assets/leadz/watches/women/5/W5-4.jpg" alt="Watch 5" />
+        <img src="../../../../assets/leadz/watches/women/5/W5-9.jpg" alt="Watch 5" />
+        <img src="../../../../assets/leadz/watches/women/5/W5-5.jpg" alt="Watch 5" />
+        <img src="../../../../assets/leadz/watches/women/5/W5-6.jpg" alt="Watch 5" />
+        <img src="../../../../assets/leadz/watches/women/5/W5-7.jpg" alt="Watch 5" />
     </div>
 
     <!-- Main Image with Arrows -->
@@ -40,7 +44,7 @@
 
     <!-- Product Details -->
     <div class="details">
-        <h1 class="title">NAVIFORCE</h1>
+        <h1 class="title">NAVIFORCE 9226 – Women’s Watch</h1>
 
         <div class="price-section">
             <div id="price">LKR 5,500.00</div>
@@ -48,7 +52,7 @@
         </div>
 
         <p class="description">
-            NAVIFORCE
+            Stylish and refined, the NAVIFORCE 9226 is designed to highlight feminine elegance with a modern twist. Its sleek dial, comfortable fit, and everyday durability make it the perfect accessory for both casual and dressy occasions.
         </p>
 
         <div class="brand-label">Brand: NAVIFORCE</div>
@@ -56,11 +60,11 @@
         <!-- Color Options with Price -->
         <div class="colors" id="colors">
             <div class="color-option selected" data-price="5,500" data-original="8350.00">
-                <img src="../../../../assets/leadz/watches/women/5/W5-2.jpg" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/women/5/W5-4.jpg" alt="Watch" />
                 <div class="color-label">Silver-Black</div>
             </div>
             <div class="color-option" data-price="5,500" data-original="8350.00">
-                <img src="../../../../assets/leadz/watches/women/5/W5-3.jpg" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/women/5/W5-7.jpg" alt="Watch" />
                 <div class="color-label">Silver</div>
             </div>
         </div>
