--- a/src/main/resources/pages/leadz/watches/women/Women-6.html
+++ b/src/main/resources/pages/leadz/watches/women/Women-6.html
@@ -25,8 +25,13 @@
     <div class="thumbs" id="thumbs">
         <img src="../../../../assets/leadz/watches/women/6/W6-1.jpg" alt="Watch 6" class="active" />
         <img src="../../../../assets/leadz/watches/women/6/W6-2.jpg" alt="Watch 6" />
-        <img src="../../../../assets/leadz/watches/women/6/W6-3.jpg" alt="Watch 6" />
-        <img src="../../../../assets/leadz/watches/women/6/W6-4.jpg" alt="Watch 6" />
+        <img src="../../../../assets/leadz/watches/women/6/W6-9.jpg" alt="Watch 6" />
+        <img src="../../../../assets/leadz/watches/women/6/W6-5.jpg" alt="Watch 6" />
+        <img src="../../../../assets/leadz/watches/women/6/W6-8.jpg" alt="Watch 6" />
+        <img src="../../../../assets/leadz/watches/women/6/W6-6.jpg" alt="Watch 6" />
+        <img src="../../../../assets/leadz/watches/women/6/W6-10.jpg" alt="Watch 6" />
+        <img src="../../../../assets/leadz/watches/women/6/W6-7.jpg" alt="Watch 6" />
+
     </div>
 
     <!-- Main Image with Arrows -->
@@ -41,7 +46,7 @@
 
     <!-- Product Details -->
     <div class="details">
-        <h1 class="title">NAVIFORCE</h1>
+        <h1 class="title">NAVIFORCE 5060 – Ladies Watch</h1>
 
         <div class="price-section">
             <div id="price">LKR 4,000.00</div>
@@ -49,7 +54,7 @@
         </div>
 
         <p class="description">
-            NAVIFORCE
+            Designed with elegance and strength in mind, the NAVIFORCE 5060 Ladies Watch features a sleek dial and a comfortable fit, combining style with everyday reliability. Perfect for women who want a bold yet feminine accessory.
         </p>
 
         <div class="brand-label">Brand: NAVIFORCE</div>
@@ -61,11 +66,11 @@
                 <div class="color-label">Silver-Brown</div>
             </div>
             <div class="color-option" data-price="4,000" data-original="5500.00">
-                <img src="../../../../assets/leadz/watches/women/6/W6-3.jpg" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/women/6/W6-5.jpg" alt="Watch" />
                 <div class="color-label">Silver</div>
             </div>
             <div class="color-option" data-price="4,000" data-original="5500.00">
-                <img src="../../../../assets/leadz/watches/women/6/W6-4.jpg" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/women/6/W6-8.jpg" alt="Watch" />
                 <div class="color-label">Silver-Black</div>
             </div>
         </div>
