--- a/src/main/resources/pages/leadz/watches/men/Men-13.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-13.html
@@ -24,10 +24,15 @@
     <!-- Thumbnails -->
     <div class="thumbs" id="thumbs">
         <img src="../../../../assets/leadz/watches/men/13/M13-1.jpg" alt="Watch 13" class="active" />
-        <img src="../../../../assets/leadz/watches/men/13/M13-3.jpg" alt="Watch 13" />
-        <img src="../../../../assets/leadz/watches/men/13/M13-2.jpg" alt="Watch 13" />
-        <img src="../../../../assets/leadz/watches/men/13/M13-4.jpg" alt="Watch 13" />
+        <img src="../../../../assets/leadz/watches/men/13/M13-12.jpg" alt="Watch 13" />
+        <img src="../../../../assets/leadz/watches/men/13/M13-10.jpg" alt="Watch 13" />
+        <img src="../../../../assets/leadz/watches/men/13/M13-8.jpg" alt="Watch 13" />
+        <img src="../../../../assets/leadz/watches/men/13/M13-7.jpg" alt="Watch 13" />
+        <img src="../../../../assets/leadz/watches/men/13/M13-6.jpg" alt="Watch 13" />
+        <img src="../../../../assets/leadz/watches/men/13/M13-9.jpg" alt="Watch 13" />
         <img src="../../../../assets/leadz/watches/men/13/M13-5.jpg" alt="Watch 13" />
+        <img src="../../../../assets/leadz/watches/men/13/M13-11.jpg" alt="Watch 13" />
+
     </div>
 
     <!-- Main Image with Arrows -->
@@ -42,7 +47,7 @@
 
     <!-- Product Details -->
     <div class="details">
-        <h1 class="title">NAVIFORCE</h1>
+        <h1 class="title">NAVIFORCE 8051L</h1>
 
         <div class="price-section">
             <div id="price">LKR 6,500.00</div>
@@ -50,7 +55,7 @@
         </div>
 
         <p class="description">
-            NAVIFORCE
+            Graceful and modern, the NAVIFORCE 8051L is designed to complement the confident woman. With its refined dial, slim profile, and comfortable fit, it’s the perfect accessory for everyday elegance or special occasions.
         </p>
 
         <div class="brand-label">Brand: NAVIFORCE</div>
@@ -58,15 +63,15 @@
         <!-- Color Options with Price -->
         <div class="colors" id="colors">
             <div class="color-option selected" data-price="6,500" data-original="8700.00">
-                <img src="../../../../assets/leadz/watches/men/13/M13-2.jpg" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/men/13/M13-6.jpg" alt="Watch" />
                 <div class="color-label">Black</div>
             </div>
             <div class="color-option" data-price="6,500" data-original="8700.00">
-                <img src="../../../../assets/leadz/watches/men/13/M13-3.jpg" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/men/13/M13-11.jpg" alt="Watch" />
                 <div class="color-label">Green</div>
             </div>
             <div class="color-option" data-price="6,500" data-original="8700.00">
-                <img src="../../../../assets/leadz/watches/men/13/M13-4.jpg" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/men/13/M13-9.jpg" alt="Watch" />
                 <div class="color-label">Brown</div>
             </div>
             <div class="color-option" data-price="6,500" data-original="8700.00">
@@ -92,13 +97,6 @@
     </div>
 </div>
 
-<!-- Promo Video Section -->
-<div class="promo-video">
-    <video autoplay muted loop playsinline>
-        <source src="../../../assets/watches/1/watch%201%20-%207.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
-    </video>
-</div>
 
 <!-- JavaScript -->
 <script src="../../../../js/js.js"></script>
