--- a/src/main/resources/pages/women.html
+++ b/src/main/resources/pages/women.html
@@ -110,6 +110,45 @@
     </div>
   </a>
 
+  <!--MEN 18-->
+  <a href="leadz/watches/men/Men-18.html?id=1" class="card-link">
+    <div class="card">
+      <img src="../assets/leadz/watches/men/18/M18-1.jpg" alt="Mens Watch">
+      <h4>NAVIFORCE 9068L – Unisex Watch</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">8,000.00</span>
+        <span class="original">12,500.00</span>
+      </div>
+    </div>
+  </a>
+
+  <!--WOMEN 5-->
+  <a href="leadz/watches/women/Women-5.html?id=1" class="card-link">
+    <div class="card">
+      <img src="../assets/leadz/watches/women/5/W5-1.jpg" alt="Womens Watch">
+      <h4>NAVIFORCE 9226 – Women’s Watch</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">5,500.00</span>
+        <span class="original">8,350.00</span>
+      </div>
+    </div>
+  </a>
+
+  <!--WOMEN 6-->
+  <a href="leadz/watches/women/Women-6.html?id=1" class="card-link">
+    <div class="card">
+      <img src="../assets/leadz/watches/women/6/W6-1.jpg" alt="Womens Watch">
+      <h4>NAVIFORCE 5060 – Ladies Watch</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">4,000.00</span>
+        <span class="original">5,500.00</span>
+      </div>
+    </div>
+  </a>
+
 
 </div>
 
