--- a/index.html
+++ b/index.html
@@ -379,13 +379,12 @@
           <li><a href="#">Home</a></li>
           <li><a href="src/main/resources/pages/men.html">Men</a></li>
           <li><a href="src/main/resources/pages/women.html">Women</a></li>
+          <li><a href="src/main/resources/pages/brands.html">Brands</a></li>
           <li><a href="src/main/resources/pages/bundle.html">Bundle</a></li>
-          <li><a href="src/main/resources/pages/couple.html">Couple</a></li>
           <li><a href="src/main/resources/pages/accessories.html">Accessories</a></li>
           <li><a href="src/main/resources/pages/cases.html">Boxes</a></li>
-          <li><a href="src/main/resources/pages/luxury.html">Luxury</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <!--<li><a href="src/main/resources/pages/about.html">About</a></li>-->
+          <li><a href="https://wa.me/94785557797">Contact</a></li>
         </ul>
       </div>
 
@@ -393,7 +392,7 @@
       <div class="col-6 col-md-4 col-lg-3">
         <h6>Contact</h6>
         <p class="mb-1">Sri Lanka</p>
-        <p class="mb-1">Phone: +94 76 714 9543</p>
+        <p class="mb-1">Phone: +94 78 555 7797</p>
         <p>Email: dionzofficial01@gmail.com</p>
       </div>
 
@@ -401,9 +400,9 @@
       <div class="col-12 col-md-12 col-lg-3 mt-4 mt-lg-0">
         <h6>Follow Us</h6>
         <div class="social-links">
-          <a href="#" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
-          <a href="#" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
-          <a href="#" aria-label="TikTok"><i class="bi bi-tiktok"></i></a>
+          <a href="https://web.facebook.com/profile.php?id=61577273438278&_rdc=1&_rdr#" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
+          <a href="https://www.instagram.com/dionzofficial/" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.tiktok.com/@watches_by_dionz?is_from_webapp=1&sender_device=pc" aria-label="TikTok"><i class="bi bi-tiktok"></i></a>
         </div>
       </div>
     </div>
