--- a/src/main/resources/pages/luxury.html
+++ b/src/main/resources/pages/luxury.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Couple | Dionz</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" href="../../resources/assets/logo/W.png" type="image/x-icon">
 
   <link rel="stylesheet" href="../../resources/css/dashboard.css" />
   <link rel="stylesheet" href="../css/watch.css" />
