--- a/src/main/resources/pages/leadz/watches/men/Men-1.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-1.html
@@ -62,7 +62,7 @@
                 <div class="color-label">Brown</div>
             </div>
             <div class="color-option" data-price="1,200" data-original="2350.00">
-                <img src="../../../assets/watches/1/watch%201%20-%203.webp" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/men/1/M1-5.jpg" alt="Watch" />
                 <div class="color-label">Black</div>
             </div>
         </div>
