--- a/src/main/resources/pages/leadz/watches/men/Men-9.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-9.html
@@ -84,7 +84,7 @@
 <!-- Promo Video Section -->
 <div class="promo-video">
     <video autoplay muted loop playsinline>
-        <source src="../../../assets/watches/1/watch%201%20-%207.mp4" type="video/mp4" />
+        <source src="../../../../assets/videos/WM1410.mp4" type="video/mp4" />
         Your browser does not support the video tag.
     </video>
 </div>
