--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -335,7 +335,7 @@
       <div class="price">
         <span class="currency">LKR</span>
         <span class="current">4,500.00</span>
-        <span class="original">6,300.00</span>
+        <span class="original">8,300.00</span>
       </div>
     </div>
   </a>
@@ -433,25 +433,20 @@
 
   <div class="special-offer">
     <!-- Special‑offer items -->
-    <a href="src/main/resources/pages/couples/Couple-2.html?id=10" class="offer-link offer-item">
+    <a href="src/main/resources/pages/leadz/watches/men/Men-14.html?id=1" class="offer-link offer-item">
       <div class="offer-watch">
         <div class="offer-image">
-          <video autoplay muted loop playsinline>
-            <source src="src/main/resources/assets/couples/2/couple%202%20-%202.mp4" type="video/mp4" />
-            Your browser does not support the video tag.
-          </video>
-          <!--<img src="../../assets/couples/2/couple 2 - 14.png" alt="Couple Watch">-->
+          <img src="src/main/resources/assets/leadz/watches/men/14/M14-1.jpg" alt="Mens Watch">
         </div>
-
         <div class="offer-details">
-          <h4>Couple POEDAGAR Luxury Watches</h4>
+          <h4>NAVIFORCE 9248L</h4>
           <p class="offer-desc">
-            Fashionable Couple Combination Set - POEDAGAR Watch, Calendar, Week, Night Light, Stainless Steel with Quartz Watch - Mixed Color, Pointer Display, Electronic Drive, Quartz Movet, Casual Style, Stainless Steel Strap
+            The NAVIFORCE 9248L blends sleek design with reliable function. Featuring a bold dial, comfortable strap, and precise timekeeping, it’s built for everyday wear with a touch of modern edge. A stylish choice for men who value both looks and performance.
           </p>
           <div class="offer-price">
             <span class="currency">LKR</span>
-            <span class="current">15,000.00</span>
-            <span class="original">21,550.50</span>
+            <span class="current">4,500.00</span>
+            <span class="original">8,300.00</span>
           </div>
         </div>
       </div>
