--- a/src/main/resources/pages/leadz/watches/men/Men-2.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-2.html
@@ -46,7 +46,7 @@
 
     <!-- Product Details -->
     <div class="details">
-        <h1 class="title">TITAN</h1>
+        <h1 class="title">TITAN Watch</h1>
 
         <div class="price-section">
             <div id="price">LKR 1,500.00</div>
