--- a/src/main/resources/pages/leadz/watches/bundle/Bundle-1.html
+++ b/src/main/resources/pages/leadz/watches/bundle/Bundle-1.html
@@ -17,7 +17,7 @@
 <a href="javascript:history.back()" class="back-button" aria-label="Go back">
     <img src="../../../../assets/imgs/back.png" alt="Back" />
 </a>
-<div class="product-id">ID: WM1415</div>
+<div class="product-id">ID: WB1415</div>
 
 <div class="container">
 
@@ -46,7 +46,7 @@
         <h1 class="title">QUARTZ Ladies Bundle Box Set</h1>
 
         <div class="price-section">
-            <div id="price">LKR 1,200.00</div>
+            <div id="price">LKR 2,000.00</div>
             <div class="original-price" id="originalPrice">LKR 4,200.00</div>
         </div>
 
